--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,26 @@ body {
 }
 
 .header {
-    color: salmon;
+    color: slategrey;
     font-size: 50px;
     padding: 30px;
-    border: 10px solid salmon;
+    border: 10px solid slategrey;
     font-family: monospace;
 }
 
 .page {
     padding: 10px;
+    height: 210px;
     background-color: aquamarine;
     font-family: monospace;
 }
 
 ul li {
     list-style: none;
-    margin: 30px;
+    margin-bottom: 10px;
     color: slategray;
+    margin-right: 10px;
+    margin-bottom: 10px;;
     font-size: medium;
     font-weight: bolder;
     font-family: monospace;
@@ -32,11 +35,20 @@ p {
     font-family: monospace;
 }
 
+h4 {
+    font-family: monospace;
+    border-left: 30px solid slategray;
+    border-right: 30px solid slategray;
+    color: white;
+    padding: 10px;
+    text-transform: uppercase;
+}
+
 button {
     padding: 10px;
     background-color: white;
-    color: salmon;
-    width: 150px;
+    color: slategrey;
+    width: 110px;
     text-align: center;
     text-transform: uppercase;
     border: 0;
@@ -48,17 +60,23 @@ button {
 
 li {
     text-decoration: none;
+    font-weight: bolder;
 }
 
 .h2 {
-    color: salmon;
+    color: slategrey;
     font-family: monospace;
 }
 
 input {
     padding: 10px;
-    color: salmon;
-    border: 2px solid salmon;
-    font-weight: bolder;
+    color: slategray;
+    border: 2px solid slategrey;
+    font-weight: normal;
+    font-size: larger;
     font-family: monospace;
+}
+
+.flexing {
+    display: flex;
 }
